[RLM] Provide a action to notify users by email based on a configurable time
Closes #41788

Signed-off-by: Martin Kanis <mkanis@redhat.com>